2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Work MinGW again.

2006-11-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatkdocument.c: Added Atk::Document#get_attribute_value, #[]
	#set_attribute_value, #[]=, #attributes for ATK+-1.12.
	Added #locale.
	* src/rbatkcomponent.c: Added Atk::Component#alpha. for ATK+-1.12.

2006-05-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbatktext.c (rbatk_text_remove_selection): Fix to convert the
	third argument of rb_raise from VALUE to int.

2005-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Improved cygwin support. [bug #1315334]
	By Yaakov Selkowitz.

2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/makeversion.rb: Removed. Use make_version_header() of 
	Ruby/GLib.
	* extconf.rb: Follow above change.
	
2005-10-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix a linking error on Cygwin.

2005-09-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatk.c: Renamed Atk::VERSION to Atk::BUILD_VERSION.
	Removed Atk::(MAJOR|MINOR|MICRO)_VERSION.

2005-09-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatk.c: Added Atk::VERSION, Atk::(MAJOR|MINOR|MICRO)_VERSION.
	* src/rbatkutil.c: Added Atk::Util::KeyEventType, Atk.focus_object,
	.(add|remove)_key_event_listener, .focus_tracker_notify. 
	Move all methods/constants to Atk::Util from Atk.
	* src/rbatktext.c: Added Atk::Text::Attribute#type_register, #for_name, 
	#get_value.
	* src/rbatkstreamablecontent.c: Added Atk::StreamableContent#get_stream. 

2005-09-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatkrelationset.c: Added Atk::RelationSet#add_relation 
	for ATK-1.9.0.
	* src/makeversion.rb: Added. Version information and 
	ATK_CHECK_VERSION.
	* extconf.rb, src/rbatk.h: Added version information.
	* src/depend: Added. Install rbatk.h, rbatkversion.h.
	* src/rbatkrelation.c: Added Atk::Relation#add_target for ATK-1.9.0.
	* src/rbatkobject.c: Support ATK-1.10.

2005-02-17  Masao Mutoh  <mutoh@highway.ne.jp>
