@@ -1,3 +1,9 @@
+2007-06-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbatkdocument.c: Define Atk::Document#locale only when Atk is 1.12 or later.
+	Earlier version of Atk doesn't have atk_document_get_locale(),
+	although it's not listed at <http://developer.gnome.org/doc/API/2.0/atk/ix07.html>.
+
 2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb: Work MinGW again.
